# Telegram-Mini-App-Seamless-Auth-Rust-Typescript

./: .gitignore  README.md  start-app.ps1
backend/: .env  Cargo.toml
backend/src/: auth.rs  db.rs  main.rs  models.rs  routes.rs
backend/src/routes/: auth.rs  users.rs
frontend/: .env  index.html  package-lock.json  package.json  vite.config.mts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Login.tsx  UserList.tsx
frontend/src/config/: telegram.ts
frontend/src/types/: telegram-webapp.d.ts
