[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto-pay-api = "0.1.0"
init-data-rs = { version = "0.1.1" }
tokio = { version = "1.36", features = ["full"] }
axum = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
dotenv = "0.15"
tower-http = { version = "0.6.2", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
http = "1.0"
